# poetry_typer

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: .coveragerc  .editorconfig  .flake8  .gitattributes  .pre-commit-config.yaml  .proclamation.json  .vale.ini  Dockerfile  README.md  list-key-dev-packages.py  make-linux-release.sh  mkdocs.yml  mypy.ini  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: main.yml
{{cookiecutter.repo_name}}/docs/: Installation.md  changelog.md  index.md
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __main__.py  {{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/tests/: __init__.py  test_{{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/vale/styles/proselint/: Needless.yml
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py  {{cookiecutter.package_name}}.py
